Question about connection static 2

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,30 +4,30 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="icon" href="../static/favicon.ico">
+        <link rel="icon" href="/favicon.ico">
         <title>twitter-clone</title>
-        <link href="../static/css/chunk-0420bcc4.d6bc3184.css" rel="prefetch">
-        <link href="../static/css/chunk-10e0d5b4.130d80ef.css" rel="prefetch">
-        <link href="../static/css/chunk-732a3e8c.6334cd6b.css" rel="prefetch">
-        <link href="../static/css/chunk-7f2f8a9f.c00c71ca.css" rel="prefetch">
-        <link href="../static/js/chunk-0420bcc4.779ff0ce.js" rel="prefetch">
-        <link href="../static/js/chunk-10e0d5b4.9c7d25b8.js" rel="prefetch">
-        <link href="../static/js/chunk-500cde1e.e78628b2.js" rel="prefetch">
-        <link href="../static/js/chunk-732a3e8c.150671f1.js" rel="prefetch">
-        <link href="../static/js/chunk-7f2f8a9f.2e2eaed3.js" rel="prefetch">
-        <link href="../static/css/app.45d81840.css" rel="preload" as="style">
-        <link href="../static/css/chunk-vendors.de691de6.css" rel="preload" as="style">
-        <link href="../static/js/app.dda28e5a.js" rel="preload" as="script">
-        <link href="../static/js/chunk-vendors.398321e0.js" rel="preload" as="script">
-        <link href="../static/css/chunk-vendors.de691de6.css" rel="stylesheet">
-        <link href="../static/css/app.45d81840.css" rel="stylesheet">
+        <link href="/css/chunk-0420bcc4.d6bc3184.css" rel="prefetch">
+        <link href="/css/chunk-10e0d5b4.130d80ef.css" rel="prefetch">
+        <link href="/css/chunk-732a3e8c.6334cd6b.css" rel="prefetch">
+        <link href="/css/chunk-7f2f8a9f.c00c71ca.css" rel="prefetch">
+        <link href="/js/chunk-0420bcc4.779ff0ce.js" rel="prefetch">
+        <link href="/js/chunk-10e0d5b4.9c7d25b8.js" rel="prefetch">
+        <link href="/js/chunk-500cde1e.e78628b2.js" rel="prefetch">
+        <link href="/js/chunk-732a3e8c.150671f1.js" rel="prefetch">
+        <link href="/js/chunk-7f2f8a9f.2e2eaed3.js" rel="prefetch">
+        <link href="/css/app.45d81840.css" rel="preload" as="style">
+        <link href="/css/chunk-vendors.de691de6.css" rel="preload" as="style">
+        <link href="/js/app.dda28e5a.js" rel="preload" as="script">
+        <link href="/js/chunk-vendors.398321e0.js" rel="preload" as="script">
+        <link href="/css/chunk-vendors.de691de6.css" rel="stylesheet">
+        <link href="/css/app.45d81840.css" rel="stylesheet">
     </head>
     <body>
         <noscript>
             <strong>We're sorry but twitter-clone doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
         <div id="app"></div>
-        <script src="../static/js/chunk-vendors.398321e0.js"></script>
-        <script src="../static/js/app.dda28e5a.js"></script>
+        <script src="/js/chunk-vendors.398321e0.js"></script>
+        <script src="/js/app.dda28e5a.js"></script>
     </body>
 </html>
